--- a/index.css
+++ b/index.css
@@ -1,3 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding-top: 50px;
+}
+
+#map {
+  height: 50%;
+  display: none;
+}
+.salad_list {
+  display: none;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
