--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 html, body {
   height: 100%;
   margin: 0;
-  background-color: #3CB371;
+  /* background-color: #3CB371; */
   font-family: 'roboto', sans-serif;
 }
 
@@ -27,6 +27,8 @@ html, body {
   height: 8vh;
   width: 35vw;
   font-weight: bold;
+  background-color: white;
+  border-radius: 5px;
 }
 
 /* map */
@@ -35,10 +37,21 @@ html, body {
   display: none;
 }
 
+.trans {
+  display: none;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1vh;
+  z-index: 2;
+  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1));
+}
+
 /* salad list */
 .salad_list {
   display: none;
   text-align: center;
+  background-color: #3CB371;
   overflow-y: auto;
   max-height: 50vh;
 }
