--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ html, body {
   margin: 0;
   /* background-color: #3CB371; */
   font-family: 'roboto', sans-serif;
+  background-color: #3CB371;
 }
 
 /* welcome page */
@@ -18,9 +19,13 @@ html, body {
   margin-top: 20vh;
 
   text-align: center;
-  border: 1px solid black;
+  border: 3px solid black;
+  border-radius: 5px;
   margin-left: 5%;
   margin-right: 5%;
+
+  background-color: white;
+
   position: relative;
 }
 
